--- a/techfest/templates/index.html
+++ b/techfest/templates/index.html
@@ -71,7 +71,7 @@
 		<header class="page1">
 			<div class="container_12">
 				<div class="grid_12">
-					<h1><a href="http://www.bcrec.ac.in/" onClick="goToByScroll('page1'); return true;"> <img src="/static/images/logo/logo111.png"alt="Horizon"></a></h1>
+					<h1><a href="http://horizonbcrec.in/" onClick="goToByScroll('page1'); return true;"> <img src="/static/images/logo/logo111.png"alt="Horizon"></a></h1>
 		             
 					<div class="menu_block">
 						<nav class="">
@@ -88,7 +88,7 @@
 					<h6>Mail us on:</h6></br>
 					<h9>bcrec.horizon2k15@gmail.com<div id="fb-root"></div></h9>
 					</br></br></br><h4>Horizon 2k15 is the 12th annual National level Techno Management Festival  </br>
-					<b>Dr. B. C. Roy Engineering College Durgapur.</b></h4>
+					<b><a href="http://bcrec.ac.in/" target="blank">Dr. B. C. Roy Engineering College Durgapur.</a></b></h4>
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -128,7 +128,7 @@
 					</div>
 					</br>
 					
-						<a href="https://www.facebook.com/hrzn2k15"><img src="/static/images/socials.png" alt=""></a>
+						<a href="https://www.facebook.com/hrzn2k15" target="blank"><img src="/static/images/socials.png" alt=""></a>
 						
 					</img>
 				</div>
