--- a/techfest/templates/index.html
+++ b/techfest/templates/index.html
@@ -71,7 +71,7 @@
 		<header class="page1">
 			<div class="container_12">
 				<div class="grid_12">
-					<h1><a href="http://horizonbcrec.in/" onClick="goToByScroll('page1'); return true;"> <img src="/static/images/logo/logo111.png"alt="Horizon"></a></h1>
+					<h1><a href="#" onClick="goToByScroll('page1'); return true;"> <img src="/static/images/logo/logo111.png"alt="Horizon"></a></h1>
 		             
 					<div class="menu_block">
 						<nav class="">
