--- a/techfest/templates/index.html
+++ b/techfest/templates/index.html
@@ -78,8 +78,8 @@
 							<ul class="sf-menu">
 								<li class="current men"><a onClick="goToByScroll('page1'); return false;" href="#">Home </a> <strong class="hover"></strong></li>
 								<li class="men1"><a onClick="goToByScroll('page2'); return false;" href="#">Events</a><strong class="hover"></strong></li>
-								<li class=" men2"><a onClick="goToByScroll('page3'); return false;" href="#">workshops</a> <strong class="hover"></strong></li>
-								<li class=" men4"><a onClick="goToByScroll('page5'); return false;" href="#">contacts</a> <strong class="hover"></strong></li>
+								<li class=" men2"><a onClick="goToByScroll('page3'); return false;" href="#">Workshops</a> <strong class="hover"></strong></li>
+								<li class=" men4"><a onClick="goToByScroll('page5'); return false;" href="#">Contact Us</a> <strong class="hover"></strong></li>
 							</ul>
 						</nav>
 						<div class="clear"></div>
@@ -150,7 +150,7 @@
 						<div class="text1"><a >For EveryOne</a></div></br>IGNITIA (GK Quiz)</br>
 						FLASH MOB</br>CINEKSHETRA</br>#include&lt;Wannacode.h&gt;
 						</br>WEB DEVELOPMENT</br>TEE-ZINE (t-shirt painting)</br>SHOW OFF (Poster making)</br>BIZCOGNITO (business plan)</br>XPOSED (Photography)
-						</br>ROBOTICS</br>ANDROID APP DEVELOPMENT</br>PEN IT DOWN
+						</br>ROBOTICS</br>APPSTRUCT (Android application development)</br>PEN IT DOWN
 						
 						
 						
@@ -203,7 +203,8 @@
 				<div class="grid_3">
 					<div class="box maxheight">
 						
-						<div class="text1"><a >For CE</a></div></br>Coming soon... 
+						<div class="text1"><a >For CE</a></div></br>Infra Quiz (Civil duiz)</br></br>
+						The Builder (Building design)</br></br>Make Ur World (Demo structure creation)</br></br>Auto Cad Designing
 						
 						
 					</div>
@@ -211,7 +212,7 @@
 				<div class="grid_3">
 					<div class="box maxheight">
 						
-						<div class="text1"><a >For Gaming Events</a></div></br>
+						<div class="text1"><a >Gaming Events</a></div></br>
 						COUNTER STRIKE 1.6</br></br>NFS MOST WANTED</br></br>FIFA 11</br></br>ANGRY BIRDS
 						</br></br>TEKKEN
 						
